--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 
 body {
-  margin: 1%;
-  font-family: 'Poppins', sans-serif
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
+  background-color: #e4e6eb;
 }
